--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -5,6 +5,11 @@
     <title>title</title>
     <link rel="stylesheet" href="../stylesheets/jquery.mobile-1.4.5.css"/>
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script>
+    $(document).bind('mobileinit',function(){
+        $.mobile.pushStateEnabled = false;
+    });
+</script>
     <script src="../javascripts/jquery.mobile-1.4.5.js"></script>
 <script type="text/javascript">
     var username;
