--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>title</title>
     <link rel="stylesheet" href="../stylesheets/jquery.mobile-1.4.5.css"/>
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
