--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -101,7 +101,7 @@
 </head>
 <body>
 this is the second Page: <span id="name"></span>
-<img id='headimg'/>
+<img id='headimg' width="50px" height="50px"/>
 <br>
 <input style="height=30px;width=60px" type="text" id="score" />
 <button onclick="upScore()">提交</button>
