--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -117,6 +117,7 @@ this is the second Page: <span id="name"></span>
       </ul>
     </div>
 <div>
+<iframe src="../games/flappy/index.html"></iframe>
 </div>
     <div id='rankList'>排行榜：</div>
 
