--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -104,11 +104,11 @@
 <body>
 this is the second Page: <span id="name"></span>
 <img id='headimg' width="50px" height="50px"/>
-<br>
+<!-- <br>
 <input style="height=30px;width=60px" type="text" id="score" />
 <button onclick="upScore()">提交</button>
 <button onclick="getRanklist()">排行榜</button>
-<div data-role="header">
+<div data-role="header"> -->
 <!-- <div data-role="navbar">
       <ul>
         <li><a href="#" data-icon="home">首页</a></li>
