--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -117,10 +117,10 @@ this is the second Page: <span id="name"></span>
       </ul>
     </div>
 <div> -->
-<iframe src="../games/flappy/index.html" width="100%" scrolling="no"></iframe>
-</div>
+<!-- </div> -->
     <!-- <div id='rankList'>排行榜：</div> -->
-</div>
+    <iframe src="../games/flappy/index.html" width="100%" scrolling="no"></iframe>
+<!-- </div> -->
 </body>
 <script>
     /*var username;
