--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -102,25 +102,25 @@
     </script>
 </head>
 <body>
-this is the second Page: <span id="name"></span>
+<span id="name"></span>
 <img id='headimg' width="50px" height="50px"/>
-<!-- <br>
+<br>
 <input style="height=30px;width=60px" type="text" id="score" />
 <button onclick="upScore()">提交</button>
 <button onclick="getRanklist()">排行榜</button>
-<div data-role="header"> -->
-<!-- <div data-role="navbar">
+<div data-role="header">
+<div data-role="navbar">
       <ul>
         <li><a href="#" data-icon="home">首页</a></li>
         <li><a href="#" data-icon="arrow-r">页面二</a></li>
         <li><a href="#" data-icon="search">搜索</a></li>
       </ul>
     </div>
-<div> -->
-<!-- </div> -->
-    <!-- <div id='rankList'>排行榜：</div> -->
-    <iframe src="../games/flappy/index.html" width="100%" scrolling="no"></iframe>
-<!-- </div> -->
+<div>
+<iframe src="../games/flappy/index.html" width="100%" scrolling="no"></iframe>
+</div>
+    <div id='rankList'>排行榜：</div>
+</div>
 </body>
 <script>
     /*var username;
