--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -104,11 +104,11 @@
 <body>
 <span id="name"></span>
 <img id='headimg' width="50px" height="50px"/>
-<br>
+<!-- <br> -->
 <input style="height=30px;width=60px" type="text" id="score" />
 <button onclick="upScore()">提交</button>
 <button onclick="getRanklist()">排行榜</button>
-<div data-role="header">
+<!-- <div data-role="header">
 <div data-role="navbar">
       <ul>
         <li><a href="#" data-icon="home">首页</a></li>
@@ -116,7 +116,7 @@
         <li><a href="#" data-icon="search">搜索</a></li>
       </ul>
     </div>
-<div>
+<div> -->
 <iframe src="../games/flappy/index.html" width="100%" scrolling="no"></iframe>
 </div>
     <div id='rankList'>排行榜：</div>
