--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -11,6 +11,7 @@
         $.mobile.changePage.defaults.changeHash = false;
         $.mobile.hashListeningEnabled = false;
         $.mobile.pushStateEnabled = false;
+        $.mobile.loader.prototype.options.text = "loading";
     });
 </script>
     <script src="../javascripts/jquery.mobile-1.4.5.js"></script>
