--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -11,7 +11,11 @@
         $.mobile.changePage.defaults.changeHash = false;
         $.mobile.hashListeningEnabled = false;
         $.mobile.pushStateEnabled = false;
+
         $.mobile.loader.prototype.options.text = "loading";
+        $.mobile.loader.prototype.options.textVisible = false;
+        $.mobile.loader.prototype.options.theme = "a";
+        $.mobile.loader.prototype.options.html = "";
     });
 </script>
     <script src="../javascripts/jquery.mobile-1.4.5.js"></script>
