--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -27,6 +27,7 @@
     var disable;
     var wgateidTag;
         (function() {
+            $.mobile.loading( "show" );
             WgateJs = {};
             WgateJs.auto_auth=true;
             WgateJs.gate_options={force:1,info:"none"};
