--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -127,7 +127,7 @@
       </ul>
     </div>
 <div> -->
-<iframe src="../games/escape/index.html" width="100%" scrolling="no"></iframe>
+<iframe src="../games/memory/index.html" width="100%" scrolling="no"></iframe>
 </div>
     <div id='rankList'>排行榜：</div>
 </div>
