--- a/gamerank/pages/sys/second.html
+++ b/gamerank/pages/sys/second.html
@@ -117,6 +117,7 @@ this is the second Page: <span id="name"></span>
 <div>
 </div>
     <div id='rankList'>排行榜：</div>
+    <a href="rankDialog.html" data-rel="dialog" data-transition="pop">排行榜</a>
 
 </div>
 </body>
