--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,14 +1,37 @@
-<div role="dialog" class="ui-dialog-contain ui-corner-all ui-overlay-shadow">
+<!DOCTYPE html> 
+<html> 
+<head> 
+	<title>Page Title</title> 
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+	<style>
+	html, body { padding: 0; margin: 0; }
+	html, .ui-mobile, .ui-mobile body {
+    	height: 415px;
+	}
+	.ui-mobile, .ui-mobile .ui-page {
+    	min-height: 415px;
+	}
+	.ui-content{
+		padding:10px 15px 0px 15px;
+	}
+	</style>
+</head> 
+<body>
+<div data-role="dialog">
 	
-		<div data-role="header" data-theme="d" class="ui-corner-top ui-header ui-bar-d" role="banner"><a href="#" data-icon="delete" data-iconpos="notext" class="ui-btn-left ui-btn ui-btn-up-d ui-shadow ui-btn-corner-all ui-btn-icon-notext" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" data-theme="d" title="Close"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Close</span><span class="ui-icon ui-icon-delete ui-icon-shadow">&nbsp;</span></span></a>
-			<h1 class="ui-title" role="heading" aria-level="1">Dialog</h1>
-
+		<div data-role="header" data-theme="d">
+			<h1>Dialog</h1>
 		</div>
-
-		<div data-role="content" data-theme="c" class="ui-corner-bottom ui-content ui-body-c" role="main">
+		<div data-role="content" data-theme="c">
 			<h1>Delete page?</h1>
 			<p>This is a regular page, styled as a dialog. To create a dialog, just link to a normal page and include a transition and <code>data-rel="dialog"</code> attribute.</p>
-			<a href="dialog/index.html" data-role="button" data-rel="back" data-theme="b" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-up-b"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Sounds good</span></span></a>       
-			<a href="dialog/index.html" data-role="button" data-rel="back" data-theme="c" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-shadow ui-btn-corner-all ui-btn-up-c"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Cancel</span></span></a>    
+			<a href="example1.html" data-role="button" data-rel="back" data-theme="b">Sounds good</a>       
+			<a href="example1.html" data-role="button" data-rel="back" data-theme="c">Cancel</a>    
 		</div>
 	</div>
+ 
+</body>
+</html>
