--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -23,6 +23,7 @@
         <div class="info">
             <span class="tries">0</span>x
             <button class="new-game">New Game</button>
+            <button class="rank">rank</button>
         </div>
 
     </div>
