--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -7,6 +7,9 @@
 <meta name="viewport" content="initial-scale=1, minimal-ui">
 <title>Memory</title>
 <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../../stylesheets/jquery.mobile-1.4.5.css"/>
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="../javascripts/jquery.mobile-1.4.5.js"></script>
 <link href="apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
 <link href="apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
 <link href="startup-640x1096.png" rel="apple-touch-startup-image" sizes="640x1096" />
