--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -42,7 +42,7 @@
     </div>
 
 </div>
-
+<div id="dialog"></div>
 <footer>
 
     <div class="wrapper">
@@ -52,8 +52,11 @@
     </div>
 
 </footer>
-
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+    $(function(){
+        $("#dialog").load("/sys/rankDialog.html");
+    });
+</script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.1.1/randomColor.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.2/fastclick.min.js"></script>
 <script src="js/app.js"></script>
