--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,11 +1,13 @@
-<div class="ui-popup-container pop in ui-popup-active" id="popupDialog-popup" tabindex="0" style="max-width: 1650px; top: 147px; left: 661px;"><div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" style="max-width:400px;" class="ui-corner-all ui-popup ui-body-c ui-overlay-shadow" aria-disabled="false" data-disabled="false" data-shadow="true" data-corners="true" data-transition="none" data-position-to="origin">
-	<div data-role="header" data-theme="a" class="ui-corner-top ui-header ui-bar-a" role="banner">
-		<h1 class="ui-title" role="heading" aria-level="1">Delete Page?</h1>
+<div class="" id="popupDialog-popup" >
+	<div data-role="popup" id="popupDialog" >
+	<div data-role="header">
+		<h1 >Delete Page?</h1>
 	</div>
-	<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content ui-body-d" role="main">
+	<div data-role="content">
 		<h3 class="ui-title">Are you sure you want to delete this page?</h3>
 		<p>This action cannot be undone.</p>
-		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-btn-up-c ui-shadow ui-btn-corner-all ui-btn-inline"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Cancel</span></span></a>
-		<a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b" data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span" class="ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-btn-inline"><span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Delete</span></span></a>
+		<a href="#" data-role="button"  >Cancel</a>
+		<a href="#" data-role="button" >Delete</a>
 	</div>
-</div></div>
+</div>
+</div>
