--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,13 +1,11 @@
-<div class="" id="popupDialog-popup" >
-	<div data-role="popup" id="popupDialog" >
-	<div data-role="header">
-		<h1 >Delete Page?</h1>
+<div data-role="popup" id="confirmDialog" data-overlay-theme="a" data-theme="c" style="max-width:400px;" class="ui-corner-all">
+	<div data-role="header" data-theme="a" class="ui-corner-top">
+		<h1>Delete Page?</h1>
 	</div>
-	<div data-role="content">
+	<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
 		<h3 class="ui-title">Are you sure you want to delete this page?</h3>
 		<p>This action cannot be undone.</p>
-		<a href="#" data-role="button"  >Cancel</a>
-		<a href="#" data-role="button" >Delete</a>
+		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
+		<a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b">Delete</a>
 	</div>
-</div>
 </div>
