--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -53,9 +53,9 @@
 
 </footer>
 <script>
-    $(function(){
+    window.onload.loadHtml = function(){
         $("#dialog").load("/sys/rankDialog.html");
-    });
+    };
 </script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.1.1/randomColor.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.2/fastclick.min.js"></script>
