--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -53,7 +53,7 @@
 
 </footer>
 <script>
-    window.onload.loadHtml = function(){
+    window.onload = function(){
         $("#dialog").load("/sys/rankDialog.html");
     };
 </script>
