--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -57,6 +57,11 @@
         $("#dialog").load("/sys/rankDialog.html");
     };
 </script>
+
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="../../stylesheets/jquery.mobile-1.4.5.css"/>
+<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="../../javascripts/jquery.mobile-1.4.5.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.1.1/randomColor.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.2/fastclick.min.js"></script>
 <script src="js/app.js"></script>
