--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -55,6 +55,7 @@
 <script>
     window.onload = function(){
         $("#dialog").load("/sys/rankDialog.html");
+        $("#dialog").trigger("create");
     };
 </script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.1.1/randomColor.min.js"></script>
