--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,4 +1,4 @@
-<div data-role="popup" id="confirmDialog" data-overlay-theme="a" data-theme="c" style="max-width:400px;" class="ui-corner-all">
+<div data-role="popup" id="confirmDialog" data-overlay-theme="a" data-theme="c" style="max-width:400px;">
 	<div data-role="header" data-theme="a" class="ui-corner-top">
 		<h1>Delete Page?</h1>
 	</div>
