--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,8 +1,8 @@
-<div data-role="popup" id="confirmDialog" data-overlay-theme="a" data-theme="c" style="max-width:400px;">
+<div data-role="popup" id="confirmDialog" >
 	<div data-role="header" data-theme="a" class="ui-corner-top">
 		<h1>Delete Page?</h1>
 	</div>
-	<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
+	<div data-role="content">
 		<h3 class="ui-title">Are you sure you want to delete this page?</h3>
 		<p>This action cannot be undone.</p>
 		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
