--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -3,8 +3,8 @@
 		<h1>Delete Page?</h1>
 	</div>
 	<div data-role="content">
-		<h3 class="ui-title">Are you sure you want to delete this page?</h3>
-		<p>This action cannot be undone.</p>
+		<h3 class="ui-title">you scores</h3>
+		<p id="score">you have try </p>
 		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
 		<a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b">Delete</a>
 	</div>
