--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,11 +1,11 @@
-<div data-role="popup" id="confirmDialog" >
-	<div data-role="header" data-theme="a" class="ui-corner-top">
-		<h1>Delete Page?</h1>
+<div data-role="popup" id="popupDialog" data-theme="c" style="max-width:400px;" >
+	<div data-role="header" data-theme="a" role="banner">
+		<h1 class="ui-title" role="heading" >Delete Page?</h1>
 	</div>
-	<div data-role="content">
+	<div data-role="content" data-theme="d" role="main">
 		<h3 class="ui-title">Are you sure you want to delete this page?</h3>
 		<p>This action cannot be undone.</p>
-		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
-		<a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b">Delete</a>
+		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c"><span ><span class="ui-btn-text">Cancel</span></span></a>    
+		<a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b" ><span ><span class="ui-btn-text">Delete</span></span></a>  
 	</div>
 </div>
