--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -1,8 +1,8 @@
-<div data-role="popup" id="confirmDialog" >
+<div data-role="popup" id="confirmDialog"  data-dismissible="false">
 	<div data-role="header" data-theme="a" class="ui-corner-top">
 		<h1>Delete Page?</h1>
 	</div>
-	<div data-role="content">
+	<div data-role="main" class="ui-content">
 		<h3 class="ui-title">you scores</h3>
 		<p id="score">you have try </p>
 		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
