--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -12,7 +12,7 @@
 	<div data-role="header" data-theme="a" class="ui-corner-top">
 		<h1>Delete Page?</h1>
 	</div>
-	< data-role="main" class="ui-content">
+	<div data-role="main" class="ui-content">
 		<h3 class="ui-title">you scores</h3>
 		you have try <p id="score"></p>
 		<div id="name"></div>
