--- a/gamerank/pages/games/memory/index.html
+++ b/gamerank/pages/games/memory/index.html
@@ -60,7 +60,8 @@
 </script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.1.1/randomColor.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.2/fastclick.min.js"></script>
-<script src="js/app.js"></script>
 
+<script src="js/app.js"></script>
+<script src="/javascripts/app.js"></script>
 </body>
 </html>
