--- a/gamerank/pages/sys/rankDialog.html
+++ b/gamerank/pages/sys/rankDialog.html
@@ -8,7 +8,7 @@
 		<h3 class="ui-title">you scores</h3>
 		you have try <p id="score"></p>
 		<div id="name"></div>
-		<img id="headimg">
+		<img id="headimg" style="width: 30px;height: 30px;">
 		<div id="rankList"></div>
 		<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Cancel</a>
 		<a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b">Delete</a>
